--- a/index.html
+++ b/index.html
@@ -7,18 +7,31 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Aplikacja wielowarstwowa</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+      .wysrodkuj {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+      }
+    </style>
   </head>
   <body>
-	  <h1>Aplikacja wielowarstwowa</h1>
-    </br>
-    <h3>Autorzy</h3>
-    <ul>
-      <li>
-        <h5>Magdalena Goszkowska</h5>
-      </li>
-       <li>
-        <h5>Aleksandra Olejarz</h5>
-      </li>
-    </ul>
+    <header>
+      <h1 class="wysrodkuj">Aplikacja wielowarstwowa</h1>
+    </header>
+    <main>
+
+    </main>
+    <footer class="wysrodkuj">
+      <h3>Autorzy</h3>
+      <ul>
+        <li>
+          <h5>Magdalena Goszkowska</h5>
+        </li>
+        <li>
+          <h5>Aleksandra Olejarz</h5>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
