Dodano id dla button

--- a/index.html
+++ b/index.html
@@ -40,14 +40,15 @@
       <h1 class="">Aplikacja wielowarstwowa</h1>
     </header>
     <main>
-      <section id="menu_glowne" hidden>
+      <section id="menu_glowne">
         <div class="buttons">
-          <button type="button">PACJENCI</button> 
-          <button type="button">ZABIEGI</button>
-          <button type="button">KALENDARZ</button>
+          <button id="btn_pacjenci" type="button">PACJENCI</button> 
+          <button id="btn_zabiegi" type="button">ZABIEGI</button>
+          <button id="btn_kalendarz" type="button">KALENDARZ</button>
         </div>
       </section>
-      <section class="srodek" id="pacjenci">
+      <section  id="pacjenci" hidden>
+        <div class="srodek">
         <h2 class="wysrodkuj" style="color: violet;">REJESTR PACJENTÓW</h2>
         <table>
           <tr>
