--- a/index.html
+++ b/index.html
@@ -86,5 +86,8 @@
         </li>
       </ul>
     </footer>
+    <script>
+      window.addEventListener("load", () => 
+      { 
   </body>
 </html>
