--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Aplikacja wielowarstwowa</title>
-        <style>
+    <style>
       .wysrodkuj {
         display: flex;
         flex-direction: row;
@@ -32,7 +32,10 @@
         flex-direction: column;
         align-items: center;
       }
-
+      .zielony {
+        color: #4287f5;
+        background-color: #121212;
+      }
     </style>
   </head>
   <body>
@@ -49,24 +52,25 @@
       </section>
       <section  id="pacjenci" hidden>
         <div class="srodek">
-        <h2 class="wysrodkuj" style="color: violet;">REJESTR PACJENTÓW</h2>
-        <table>
-          <tr>
-            <th>Imie</th>
-            <th>Nazwisko</th>
-            <th>tel</th>
-          </tr>
-          <tr>
-            <td>Wojciech</td>
-            <td>Olejarz</td>
-            <td>23232323</td>
-          </tr>
-          <tr>
-            <td>Magdalena</td>
-            <td>Goszkowska</td>
-            <td>3343434</td>
-          </tr>
-        </table>
+          <h2 class="wysrodkuj" style="color: violet;">REJESTR PACJENTÓW</h2>
+          <table>
+            <tr>
+              <th>Imie</th>
+              <th>Nazwisko</th>
+              <th>tel</th>
+            </tr>
+            <tr>
+              <td>Wojciech</td>
+              <td>Olejarz</td>
+              <td>23232323</td>
+            </tr>
+            <tr>
+              <td>Magdalena</td>
+              <td>Goszkowska</td>
+              <td>3343434</td>
+            </tr>
+          </table>
+      </div>
       </section>
       <section id="zabiegi" hidden>
         <h2>REJESTR ZABIEGÓW</h2>
@@ -96,6 +100,14 @@
           const druga_sekcja=document.querySelector("#pacjenci");
           druga_sekcja.hidden=false;
         });
+        button_pacjenci.addEventListener("mouseenter",()=>{
+          let classes = button_pacjenci.classList;
+          classes.add("zielony");
+        });
+        button_pacjenci.addEventListener("mouseleave",()=>{
+          let classes = button_pacjenci.classList;
+          classes.remove("zielony");
+        });
         const button_zabiegi=document.querySelector("#btn_zabiegi");
         button_zabiegi.addEventListener("click",()=>{
           const pierwsza_sekcja=document.querySelector("#menu_glowne");
@@ -115,5 +127,6 @@
         // znajdz button pacjenci i podlacz program przełacsaaj na panel pacjenci 
         // ... kalendrz
       })
+    </script>
   </body>
 </html>
