Added styling to main page

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         flex-direction: column;
         align-items: center;
       }
-      .zielony {
-        color: #4287f5;
-        background-color: #121212;
+      body {
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        min-height: 100vh;
       }
     </style>
   </head>
