--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
     </style>
   </head>
   <body>
+    <template id="wiersz_pacjenci">
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+    </template>
     <header>
       <h1 class="">Aplikacja wielowarstwowa</h1>
     </header>
