--- a/index.html
+++ b/index.html
@@ -85,6 +85,22 @@
       <section id="kalendarz" hidden>
         <h2>KALENDARZ ZABIEGÓW</h2>
       </section>
+      <section id="szczegoly" hidden>
+        <div style="">
+          <h2 class="wysrodkuj">Szczegóły</h2>
+          <div>Imię</div>
+          <input id="szczegoly_imie" type="text">
+          <div>Nazwisko</div>
+          <input id="szczegoly_nazwisko" type="text">
+          <div>Telefon</div>
+          <input id="szczegoly_telefon" type="text">
+          <div>
+            <button id="btn_zapisz_pacjenci" type="button">Zapisz</button>
+            <button id="btn_usun_pacjenci" type="button">Usuń</button>
+            <button id="btn_powrot_pacjenci" type="button">Powrót</button>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="wysrodkuj">
       <h3>Autorzy</h3>
