Dodano obsługę nowych buttonów

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </tr>
     </template>
     <header>
-      <h1 class="">Aplikacja wielowarstwowa</h1>
+      <h1 class="wysrodkuj">Aplikacja wielowarstwowa</h1>
     </header>
     <main>
       <section id="menu_glowne">
@@ -59,19 +59,19 @@
       </section>
       <section  id="pacjenci" hidden>
         <div class="srodek">
-          <h2 class="wysrodkuj" style="color: violet;">REJESTR PACJENTÓW</h2>
+          <h2 class="wysrodkuj">REJESTR PACJENTÓW</h2>
           <table>
             <tr>
               <th>Imie</th>
               <th>Nazwisko</th>
-              <th>tel</th>
+              <th>Nr tel.</th>
             </tr>
-            <tr>
+            <tr id="wiersz1">
               <td>Wojciech</td>
               <td>Olejarz</td>
               <td>23232323</td>
             </tr>
-            <tr>
+            <tr id="wiersz2">
               <td>Magdalena</td>
               <td>Goszkowska</td>
               <td>3343434</td>
@@ -136,6 +136,36 @@
           pierwsza_sekcja.hidden=true;
           const czwarta_sekcja=document.querySelector("#kalendarz");
           czwarta_sekcja.hidden=false;
+        });
+        const wiersz1=document.querySelector("#wiersz1");
+        wiersz1.addEventListener("click",()=>{
+          const druga_sekcja=document.querySelector("#pacjenci");
+          druga_sekcja.hidden=true;
+          const piata_sekcja=document.querySelector("#szczegoly");
+          piata_sekcja.hidden=false;
+          document.querySelector("#szczegoly_imie").value="Wojciech";
+          document.querySelector("#szczegoly_nazwisko").value="Olejarz";
+          document.querySelector("#szczegoly_telefon").value="23232323";
+        });
+        const wiersz2=document.querySelector("#wiersz2");
+        wiersz2.addEventListener("click",()=>{
+          const druga_sekcja=document.querySelector("#pacjenci");
+          druga_sekcja.hidden=true;
+          const piata_sekcja=document.querySelector("#szczegoly");
+          piata_sekcja.hidden=false;
+          document.querySelector("#szczegoly_imie").value="Magdalena";
+          document.querySelector("#szczegoly_nazwisko").value="Goszkowska";
+          document.querySelector("#szczegoly_telefon").value="3343434";
+        });
+        document.querySelector("#btn_zapisz_pacjenci").addEventListener("click",()=>{
+          alert("Zapisano");
+        });
+        document.querySelector("#btn_usun_pacjenci").addEventListener("click",()=>{
+          alert("Usunięto");
+        });
+        document.querySelector("#btn_powrot_pacjenci").addEventListener("click",()=>{
+          document.querySelector("#pacjenci").hidden=false;
+          document.querySelector("#szczegoly").hidden=true;
         });
         
         // znajdz button zabiegi i podłącz program przełącający na panel zabiegi
