Selekcja tabeli i template'u wiersza

--- a/index.html
+++ b/index.html
@@ -169,7 +169,8 @@
       })
 
       function wyswietlListePacjentow() {
-        const tabelaPacjentow = document.querySelector("#")
+        const tabelaPacjentow = document.querySelector("#pacjenci tbody");
+        const templateWiersz = document.querySelector("#wiersz_pacjenci tr");
       }
     </script>
   </body>
