Dodano wewnętrzy tag

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
   <body>
     <template id="wiersz_pacjenci">
       <tr>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td><span></span></td>
+        <td><span></span></td>
+        <td><span></span></td>
       </tr>
     </template>
     <header>
