Szkietel funkcji pokazującej szczegóły pacjenta

--- a/index.html
+++ b/index.html
@@ -187,6 +187,9 @@
 
       }
 
+      function wyswietlSzczegolyPacjenta(pacjent) {
+        alert(`wyswietlono szczegoły pacjenta ${pacjent.Imie} ${pacjent.Nazwisko}`)
+      }
     </script>
   </body>
 </html>
