--- a/index.html
+++ b/index.html
@@ -162,7 +162,10 @@
           alert("Zapisano");
         });
         document.querySelector("#btn_usun_pacjenci").addEventListener("click",()=>{
-          alert("Usunięto");
+            danePacjentow=danePacjentow.filter(pacjent=>pacjent.id!=aktualnyPacjent.id);
+            wypelnijListePacjentow();
+            document.querySelector("#pacjenci").hidden=false;
+            document.querySelector("#szczegoly").hidden=true;
         });
         document.querySelector("#btn_powrot_pacjenci").addEventListener("click",()=>{
           document.querySelector("#pacjenci").hidden=false;
