Zmiana typu zmiennej

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pl">
   <head>
@@ -49,6 +48,7 @@
     <header>
       <h1 class="wysrodkuj">Aplikacja wielowarstwowa</h1>
     </header>
+
     <main>
       <section id="menu_glowne">
         <div class="buttons">
@@ -213,6 +213,7 @@
         sekcjaSzczegoly.hidden = false;
       }
 
+      let danePacjentow = [
         { "id": "1",
           "Imie": "Wojciech",
           "Nazwisko": "Olejarz",
