--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       </section>
 
       <section id="szczegoly" hidden>
-        <div style="">
+        <div>
           <h2 class="wysrodkuj">Szczegóły</h2>
           <div>Imię</div>
           <input id="szczegoly_imie" type="text">
