Zmiana nazy dla id sekcji

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <h2>KALENDARZ ZABIEGÓW</h2>
       </section>
 
-      <section id="szczegoly" hidden>
+      <section id="klient_szczegoly" hidden>
         <div>
           <h2 class="wysrodkuj">Szczegóły</h2>
           <div>Imię</div>
