--- a/index.html
+++ b/index.html
@@ -38,7 +38,13 @@
     </style>
   </head>
   <body>
-    <template id="wiersz_pacjenci">
+    <template id="wiersz_klienci">
+      <tr>
+        <td><span></span></td>
+        <td><span></span></td>
+        <td><span></span></td>
+      </tr>
+    </template>
       <tr>
         <td><span></span></td>
         <td><span></span></td>
@@ -52,15 +58,15 @@
     <main>
       <section id="menu_glowne">
         <div class="buttons">
-          <button id="btn_pacjenci" type="button">PACJENCI</button> 
+          <button id="btn_klienci" type="button">KLIENCI</button> 
           <button id="btn_zabiegi" type="button">ZABIEGI</button>
           <button id="btn_kalendarz" type="button">KALENDARZ</button>
         </div>
       </section>
 
-      <section  id="pacjenci" hidden>
+      <section  id="klienci" hidden>
         <div class="srodek">
-          <h2 class="wysrodkuj">REJESTR PACJENTÓW</h2>
+          <h2 class="wysrodkuj">LISTA PACJENTÓW</h2>
           <table>
             <thead>
               <tr>
