Dodano zawartość listy zabiegów

--- a/index.html
+++ b/index.html
@@ -83,7 +83,21 @@
       </section>
 
       <section id="zabiegi" hidden>
-        <h2>REJESTR ZABIEGÓW</h2>
+        <div class="srodek">
+          <h2 class="wysrodkuj">LISTA ZABIEGÓW</h2>
+          <table>
+            <thead>
+              <tr>
+              <th>Nazwa</th>
+              <th>Czasochłonność</th>
+              <th>Opis</th>
+            </tr>
+            </thead>
+            <tbody>
+              
+            </tbody>
+          </table>
+      </div>
       </section>
 
       <section id="kalendarz" hidden>
