--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
         </li>
       </ul>
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js" integrity="sha512-a+SUDuwNzXDvz4XrIcXHuCf089/iJAoN4lmrXJg18XnduKK6YlDHNRalv4yd1N40OKI80tFidF+rqTFKGPoWFQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="UI.js"></script>
     <script src="zarzadzanie_danymi.js"></script>
     <script>
