--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js" integrity="sha512-a+SUDuwNzXDvz4XrIcXHuCf089/iJAoN4lmrXJg18XnduKK6YlDHNRalv4yd1N40OKI80tFidF+rqTFKGPoWFQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="UI.js"></script>
+    <script src="passcode.js"></script>
     <script src="zarzadzanie_danymi.js"></script>
     <script>
       let aktualnyPacjent = null;
@@ -160,6 +161,7 @@
         initializujStrone();
 
       })
+      console.log("Access",decrypt(encryptedAPIkey,passcode))
     </script>
   </body>
 </html>
