Testowe wywołanie komunikacji z BD

--- a/index.html
+++ b/index.html
@@ -161,6 +161,9 @@
       window.addEventListener("load", () => 
       { 
         initializujStrone();
+        pobierzKlientow(klienci=>{
+          console.log(klienci)
+        })
       })
     </script>
   </body>
