Zminana sposobu dostępu do DB (jQuery)

--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
       </ul>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js" integrity="sha512-a+SUDuwNzXDvz4XrIcXHuCf089/iJAoN4lmrXJg18XnduKK6YlDHNRalv4yd1N40OKI80tFidF+rqTFKGPoWFQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://aplikacja-ac0d.restdb.io/assets/js/eventsource.min.js"></script>
-    <script src="https://aplikacja-ac0d.restdb.io/rest/_jsapi.js?plainjs=true"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+    integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="UI.js"></script>
     <script src="passcode.js"></script>
     <script src="zarzadzanie_danymi.js"></script>
