Zachowanie pobranej listy klientów

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       { 
         initializujStrone();
         pobierzKlientow(klienci=>{
-          console.log(klienci)
+          listaKlientów = klienci;
         })
       })
     </script>
