Uzupełniono funkcje dodającą klienta do DB

--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
 
       <section  id="klienci" hidden>
         <div class="srodek">
-          <h2 class="wysrodkuj">LISTA PACJENTÓW</h2>
+          <h2 class="wysrodkuj">LISTA KLIENTÓW</h2>
+          <button id="btn_dodaj_klienta" type="button">Nowy klient</button>
           <table>
             <thead>
               <tr>
