Dodano formularz nowego klienta

--- a/index.html
+++ b/index.html
@@ -138,6 +138,17 @@
           </div>
         </div>
       </section>
+      <section id="dodaj_klienta" hidden>
+        <form>
+          <label for="nowy_klient_imie">Imie:</label><br>
+          <input type="text" id="nowy_klient_imie" name="nowy_klient_imie" required><br>
+          <label for="nowy_klient_nazwisko">Nazwisko:</label><br>
+          <input type="text" id="nowy_klient_nazwisko" name="nowy_klient_nazwisko" required><br>
+          <label for="nowy_klient_tel">Telefon:</label><br>
+          <input type="text" id="nowy_klient_tel" name="nowy_klient_tel" required><br><br>
+          <input id="dodaj_klienta_submit" type="submit" value="Zapisz">
+        </form>
+      </section>
     </main>
     <footer class="wysrodkuj">
       <h3>Autorzy</h3>
@@ -162,9 +173,7 @@
       window.addEventListener("load", () => 
       { 
         initializujStrone();
-        pobierzKlientow(klienci=>{
-          listaKlientów = klienci;
-        })
+        pobierzKlientow();
       })
     </script>
   </body>
