--- a/index.html
+++ b/index.html
@@ -154,13 +154,22 @@
       </section>
       <section id="dodaj_klienta" hidden>
         <form>
-          <label for="nowy_klient_imie">Imie:</label><br>
-          <input type="text" id="nowy_klient_imie" name="nowy_klient_imie" required><br>
-          <label for="nowy_klient_nazwisko">Nazwisko:</label><br>
-          <input type="text" id="nowy_klient_nazwisko" name="nowy_klient_nazwisko" required><br>
-          <label for="nowy_klient_tel">Telefon:</label><br>
-          <input type="text" id="nowy_klient_tel" name="nowy_klient_tel" required><br><br>
-          <input id="dodaj_klienta_submit" type="submit" value="Zapisz">
+          <div class="srodek">
+            <h2 class="wysrodkuj">Nowy klient</h2>
+            <span class="spread" >
+              <label for="nowy_klient_imie">Imie:</label>
+              <input type="text" id="nowy_klient_imie" name="nowy_klient_imie" required>
+            </span>
+            <span class="spread" >
+              <label for="nowy_klient_nazwisko">Nazwisko:</label>
+              <input type="text" id="nowy_klient_nazwisko" name="nowy_klient_nazwisko" required>
+            </span>
+            <span class="spread" >
+              <label for="nowy_klient_tel">Telefon:</label>
+              <input type="text" id="nowy_klient_tel" name="nowy_klient_tel" required>
+            </span>
+            <input id="dodaj_klienta_submit" type="submit" value="Zapisz">
+          </div>
         </form>
       </section>
     </main>
