Zastosowanie uniwersalnej funkcji dostepu do danych

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
       window.addEventListener("load", () => 
       { 
         initializujStrone();
-        pobierzKlientow();
+        pobierzListeElementow("klienci", klienci => listaKlientow = klienci);
       })
     </script>
   </body>
