--- a/index.html
+++ b/index.html
@@ -181,8 +181,10 @@
               <label for="nowy_klient_tel">Telefon:</label>
               <input type="text" id="nowy_klient_tel" name="nowy_klient_tel" required>
             </span>
-            <input id="dodaj_klienta_submit" type="submit" value="Zapisz">
-            <button id="btn_powrot_dodaj_klienta" type="button">Powrót</button>
+            <span>
+              <input id="dodaj_klienta_submit" type="submit" value="Zapisz">
+              <button id="btn_powrot_dodaj_klienta" type="button">Powrót</button>
+            </span>
           </div>
         </form>
       </section>
