Dodano przycisk powrót i jego handler

--- a/index.html
+++ b/index.html
@@ -89,7 +89,10 @@
       <section  id="klienci" hidden>
         <div class="srodek">
           <h2 class="wysrodkuj">LISTA KLIENTÓW</h2>
-          <button id="btn_dodaj_klienta" type="button">Nowy klient</button>
+          <span>
+            <button id="btn_dodaj_klienta" type="button">Nowy klient</button>
+            <button id="btn_dodaj_klienta_powrot" type="button">Powrót</button>
+          </span>
           <table>
             <thead>
               <tr>
