--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
     <script src="passcode.js"></script>
     <script src="zarzadzanie_danymi.js"></script>
     <script>
-      let aktualnyPacjent = null;
+      let aktualnyKlient = null;
       let aktualnyZabieg = null;
       window.addEventListener("load", () => 
       { 
