--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       .spread {
         display: flex;
         justify-content: space-between;
-        width: 300px;
+        width: 350px;
       }
     
     </style>
@@ -91,7 +91,7 @@
           <h2 class="wysrodkuj">LISTA KLIENTÓW</h2>
           <span>
             <button id="btn_dodaj_klienta" type="button">Nowy klient</button>
-            <button id="btn_dodaj_klienta_powrot" type="button">Powrót</button>
+            <button id="btn_powrot_klienci" type="button">Powrót</button>
           </span>
           <table>
             <thead>
@@ -111,6 +111,10 @@
       <section id="zabiegi" hidden>
         <div class="srodek">
           <h2 class="wysrodkuj">LISTA ZABIEGÓW</h2>
+          <span>
+            <button id="btn_dodaj_zabieg" type="button">Nowy zabieg</button>
+            <button id="btn_powrot_zabiegi" type="button">Powrót</button>
+          </span>
           <table>
             <thead>
               <tr>
@@ -187,6 +191,29 @@
             <span>
               <input id="dodaj_klienta_submit" type="submit" value="Zapisz">
               <button id="btn_powrot_dodaj_klienta" type="button">Powrót</button>
+            </span>
+          </div>
+        </form>
+      </section>
+      <section id="dodaj_zabieg" hidden>
+        <form>
+          <div class="srodek">
+            <h2 class="wysrodkuj">Nowy zabieg</h2>
+            <span class="spread" >
+              <label for="nowy_zabieg_nazwa">Nazwa:</label>
+              <input type="text" id="nowy_zabieg_nazwa" name="nowy_zabieg_nazwa" required>
+            </span>
+            <span class="spread" >
+              <label for="nowy_zabieg_czas">Czasochłonność:</label>
+              <input type="number" id="nowy_zabieg_czas" name="nowy_zabieg_czas" required>
+            </span>
+            <span class="spread" >
+              <label for="nowy_zabieg_opis">Opis:</label>
+              <input type="textarea" id="nowy_zabieg_opis" name="nowy_zabieg_opis" required>
+            </span>
+            <span>
+              <input id="dodaj_zabieg_submit" type="submit" value="Zapisz">
+              <button id="btn_powrot_dodaj_zabieg" type="button">Powrót</button>
             </span>
           </div>
         </form>
